tests/NormalTests/paczka1/small_fuzzy/21592146.err
Error in line 2: vrUBk A570 32,9
Error in line 4: S363 S363 93,4
